# kito

./: CONTRIBUTING.md  README.md  pyproject.toml  pytest.ini  readthedocs.yaml
.github/workflows/: tests.yml
docs/source/: api.rst  conf.py  index.rst  installation.rst  quickstart.rst
examples/: mnist_cnn.py  mnist_simple.py
src/: engine.py  module.py
src/callbacks/: csv_logger.py  ddp_aware_callback.py  early_stopping_callback.py  modelcheckpoint.py  tensorboard_callback_images.py  tensorboard_callbacks.py  txt_logger.py
src/data/: datapipeline.py  datasets.py  preprocessed_dataset.py  preprocessing.py  registry.py
src/kito/: __init__.py  engine.py  module.py
src/kito/callbacks/: callback_base.py  csv_logger.py  ddp_aware_callback.py  early_stopping_callback.py  modelcheckpoint.py  tensorboard_callback_images.py  tensorboard_callbacks.py  txt_logger.py
src/kito/config/: moduleconfig.py
src/kito/data/: datapipeline.py  datasets.py  preprocessing.py
src/kito/losses/: __init__.py  builtin.py  custom.py  registry.py  utils.py
src/kito/strategies/: logger_strategy.py  progress_bar_strategy.py  progress_bar_strategy_tqdm.py  readiness_validator.py
src/kito/utils/: decorators.py  gpu_utils.py  loss_utils.py
src/strategies/: readiness_validator.py
src/utils/: gpu_utils.py  loss_utils.py
tests/: __init__.py  conftest.py  pytest.ini
tests/fixtures/: __init__.py  mock_config.py  sample_data.py
tests/integration/: __init__.py  test_data_pipeline.py  test_full_training.py
tests/unit/: __init__.py  test_datasets.py  test_engine.py  test_module.py  test_preprocessing.py  test_registry.py  test_utils.py
