[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kito"
dynamic = ["version"]
#dependencies = [  # fill that later
#    "torch>=2.0.0",
#    "numpy>=1.20.0",
#    "h5py>=3.0",
#    "torchsummary>=1.5.1",
#]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "kito.__version__"}
