[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kito"
dynamic = ["version"]
description = "Effortless PyTorch training - define your model, Kito handles the rest"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "Giuseppe Costantino", email = "giuseppe.costantino95@gmail.com"}
]

# Core dependencies (required for kito to work)
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.20.0",
    "h5py>=3.0.0",
    "torchsummary>=1.5.1",
]

# Optional dependencies (for development/testing)
[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "kito.__version__"}
