[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kito"
dynamic = ["version"]
description = "Effortless PyTorch training - define your model, Kito handles the rest"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "Giuseppe Costantino", email = "giuseppe.costantino95@gmail.com"}
]
keywords = ["pytorch", "deep-learning", "machine-learning", "training", "automation"]
# Core dependencies (required for kito to work)
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.20.0",
    "h5py>=3.0.0",
    "torchsummary>=1.5.1",
    "packaging>=20.0",
]

# Optional dependencies
[project.optional-dependencies]
# Development and testing
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
    "black>=23.0",
    "ruff>=0.1.0",
]

# TensorBoard support
tensorboard = [
    "tensorboard>=2.10.0",
]

# Documentation
docs = [
    "sphinx>=5.0",
    "sphinx-rtd-theme>=1.0",
]

# All extras (convenience)
all = [
    "tensorboard>=2.10.0",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
    "black>=23.0",
    "ruff>=0.1.0",
    "sphinx>=5.0",
    "sphinx-rtd-theme>=1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "kito.__version__"}
